--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 h2 {
   color: blue;
+  text-align: center;
+}
+.intro {
+  text-align: center;
+  color: red;
+}
+.title {
+  text-align: center;
+  color: green;
 }
