--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ h2 {
 p {
   padding-left: 20px;
   padding-right: 20px;
-  font-size: 24px;
+  font-size: 20px;
   text-align: center;
+  padding-top: 20px;
 }
 li {
   font-size: 20px;
@@ -33,9 +34,10 @@ h3 {
   margin-right: 10px;
 }
 .sydney {
-  height: 300px;
-  width: 450px;
-  margin-left: 25px;
+  height: 250px;
+  width: 350px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 .wallabies {
   height: 350px;
@@ -44,8 +46,15 @@ h3 {
 }
 .fun {
   float: right;
-  text-align: right;
+  text-align: center;
+  margin-bottom: 20px;
 }
-body {
-  background-image: url("seattle.jpg")
+.vy {
+  margin-left: 15px;
+  height: 325px;
+  width: 275px;
+}
+.guinness {
+  height: 350px;
+  width: 350px;
 }
