--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,15 @@ li {
   font-size: 20px;
 }
 h3 {
-  color: blue;
+  color: #782221;
   text-align: center;
 
 }
 .me {
   float: left;
   height: 300px;
+  padding-right: 10px;
+  margin-right: 10px;
 }
 .description {
   font-size: 14px;
@@ -39,11 +41,11 @@ h3 {
   width: 350px;
   margin-left: 15px;
   margin-right: 15px;
+  margin-top: 15px;
 }
 .wallabies {
   height: 350px;
   width: 350px;
-  margin-left: 100px;
 }
 .fun {
   float: right;
@@ -77,5 +79,13 @@ h3 {
 }
 .loony {
   float: right;
+  height: 300px;
+  padding-left: 10px;
+  margin-left: 10px;
+}
+.green {
+  color: #26C355
+}
+.brain {
   height: 300px;
 }
